tests/snapshots/parser_error_fixtures/cascade_multiple_errors.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/cascade_multiple_errors.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Function Body

This function body needs to start with `{`.

  examples/parser_errors/cascade_multiple_errors.flx:7:5
  |
6 | fn greet(name: String) -> String
  | - `greet` starts here
7 |     "Hello, " + name
  |     ^^^^^^^^^
  |     --------- This looks like the function body

Note:
  while parsing function `greet`

Help:
  Try adding `{` after the function signature.


error[E034]: Missing Function Body

This function body needs to start with `{`.

  examples/parser_errors/cascade_multiple_errors.flx:10:5
   |
 9 | fn farewell(name: String) -> String
   | - `farewell` starts here
10 |     "Goodbye, " + name
   |     ^^^^^^^^^^^
   |     ----------- This looks like the function body

Note:
  while parsing function `farewell`

Help:
  Try adding `{` after the function signature.

Found 2 errors.
== stdout ==
<not executed>
